k8s/dataverse/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dataverse
  labels:
    app.kubernetes.io/name: dataverse
    app.kubernetes.io/version: "1.1"
    app.kubernetes.io/component: appserver
    app.kubernetes.io/part-of: dataverse
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dataverse
      app.kubernetes.io/part-of: dataverse
      app.kubernetes.io/component: appserver
  revisionHistoryLimit: 1
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: "docroot,files"
      labels:
        app.kubernetes.io/name: dataverse
        app.kubernetes.io/part-of: dataverse
        app.kubernetes.io/component: appserver
    spec:
      serviceAccountName: reader
      containers:
        - name: dataverse
          image: 192.168.100.11:31000/iqss/dataverse-k8s:6.5
          imagePullPolicy: Always
# removed for testing
#          resources:
#            requests:
#              memory: "2Gi"
#            limits:
#              memory: "4Gi"
          ports:
            - containerPort: 8080
            - containerPort: 4848
          volumeMounts:
            - name: files
              mountPath: /data
            - name: docroot
              mountPath: /opt/docroot
            - name: heapdumps
              mountPath: /dumps
            - name: db-secret
              mountPath: "/secrets/db"
              readOnly: true
            - name: doi-secret
              mountPath: "/secrets/doi"
              readOnly: true
            - name: api-secret
              mountPath: "/secrets/api"
              readOnly: true
            - name: asadmin-secret
              mountPath: "/secrets/asadmin"
              readOnly: true
            # This is here because of IQSS/dataverse-kubernetes#177. TBR for #178
            - name: primefaces-upload
              mountPath: /opt/dataverse/appserver/glassfish/domains/domain1/generated/jsp/dataverse

          readinessProbe:
            httpGet:
              path: /robots.txt
              port: 8080
            initialDelaySeconds: 60 #5
            failureThreshold: 100
            periodSeconds: 5
      imagePullSecrets:
        - name: registry-auth
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: dataverse-files
        - name: docroot
          persistentVolumeClaim:
            claimName: dataverse-docroot
        - name: api-secret
          secret:
            secretName: dataverse-api
        - name: db-secret
          secret:
            secretName: dataverse-postgresql
        - name: doi-secret
          secret:
            secretName: dataverse-doi
        - name: asadmin-secret
          secret:
            secretName: dataverse-asadmin
        - name: heapdumps
          emptyDir: {}
        # This is here because of IQSS/dataverse-kubernetes#177. TBR for #178
        - name: primefaces-upload
          emptyDir: {}
