k8s/dataverse/svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: dataverse
  labels:
    app.kubernetes.io/name: dataverse
    app.kubernetes.io/version: "1.1"
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: dataverse
    app.kubernetes.io/managed-by: kubectl
spec:
  ports:
    - port: 8080
      name: http
    - port: 4848
      name: admin
      targetPort: 8080
      protocol: TCP
    - port: 8009
      name: ajp
      targetPort: 8009
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: dataverse
    app.kubernetes.io/part-of: dataverse
    app.kubernetes.io/component: appserver
